Character count feature added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
     <div class="middle-section">
       <input class="notes-bar" type="text" placeholder="What's on your mind? Note it down!">
+      <span class="char-count">50</span>
       <button class="note-it-button" id="notesBar">
         <img class="note-it-button-icon" src="/images/note-it-button.png">
       </button>
