--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
       <img class="note-it-logo-login-img" src="./images/note-it-logo.png">
     </div>
     <div class="login-btns">
-      <button class="google-btn"><img class="google-btn-img" src="./images/google-logo.png">Sign in with Google</button>
-      <button class="apple-btn"><img class="apple-btn-img" src="./images/apple-logo.png">Sign in with Apple</button>
+      <button class="google-btn" id="googleBtn"><img class="google-btn-img" src="./images/google-logo.png">Sign in with Google</button>
+      <button class="apple-btn" id="appleBtn"><img class="apple-btn-img" src="./images/apple-logo.png">Sign in with Apple</button>
     </div>
     <p class="or-text">Or</p>
     <div class="inputs">
@@ -23,7 +23,7 @@
         <button class="login-btn">Log-In</button>
       </div>
     </div>
-    <p class="create-account-text">Don't have an account? <a>Sign-Up</a></p>
+    <p class="create-account-text">Don't have an account? <a href="" target="_blank">Sign-Up</a></p>
   </div>
 
   <script src="login.js"></script>
