Files created to separate the newsfeed page from the login page

--- a/login-page/login.html
+++ b/login-page/login.html
@@ -9,11 +9,11 @@
 <body>
   <div class="login-container">
     <div class="note-it-logo-login">
-      <img class="note-it-logo-login-img" src="./images/note-it-logo.png">
+      <img class="note-it-logo-login-img" src="./login-images/note-it-logo.png"">
     </div>
     <div class="login-btns">
-      <button class="google-btn" id="googleBtn"><img class="google-btn-img" src="./images/google-logo.png">Sign in with Google</button>
-      <button class="apple-btn" id="appleBtn"><img class="apple-btn-img" src="./images/apple-logo.png">Sign in with Apple</button>
+      <button class="google-btn" id="googleBtn"><img class="google-btn-img" src="./login-images/google-logo.png">Sign in with Google</button>
+      <button class="apple-btn" id="appleBtn"><img class="apple-btn-img" src="./login-images/apple-logo.png">Sign in with Apple</button>
     </div>
     <p class="or-text">Or</p>
     <div class="inputs">
