--- a/newsfeed-page/index.html
+++ b/newsfeed-page/index.html
@@ -5,25 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Note-It</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/note-it-logo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./newsfeed-images/note-it-logo.png">
 </head>
 <body>
   <div class="header">
     <div class="left-section">
-      <img class="note-it-logo" src="/images/note-it-logo.png">
-      <img class="note-it-home-logo" src="/images/home-icon.png">
+      <img class="note-it-logo" src="./newsfeed-images/note-it-logo.png">
+      <img class="note-it-home-logo" src="./newsfeed-images/home-icon.png">
     </div>
     <div class="middle-section">
       <input class="notes-bar" type="text" placeholder="What's on your mind? Note it down!">
       <span class="char-count">50</span>
       <button class="note-it-button" id="notesBar">
-        <img class="note-it-button-icon" src="/images/note-it-button.png">
+        <img class="note-it-button-icon" src="./newsfeed-images/note-it-button.png">
       </button>
     </div>
     <div class="right-section">
-      <img class="world-icon" src="/images/world-icon.png">
-      <img class="profile-picture" src="/images/adil-profile-pic.jpeg">
-      <img class="settings-icon" src="/images/settings-icon.png">
+      <img class="world-icon" src="./newsfeed-images/world-icon.png">
+      <img class="profile-picture" src="./newsfeed-images/adil-profile-pic.jpeg">
+      <img class="settings-icon" src="./newsfeed-images/settings-icon.png">
     </div>
   </div>
 
@@ -31,7 +31,7 @@
     <div class="tweet">
       <div class="head">
         <div class="profile-image">
-          <img src="/images/adil-profile-pic.jpeg">
+          <img src="./newsfeed-images/adil-profile-pic.jpeg">
         </div>
         <div class="name-address">
           <div class="name">Adil Del Rey</div>
@@ -56,7 +56,7 @@
     <div class="tweet">
       <div class="head">
         <div class="profile-image">
-          <img src="/images/coasterdelrey-profile-pic.png">
+          <img src="./newsfeed-images/coasterdelrey-profile-pic.png">
         </div>
         <div class="name-address">
           <div class="name">Coaster Del Rey</div>
@@ -81,7 +81,7 @@
     <div class="tweet">
       <div class="head">
         <div class="profile-image">
-          <img src="/images/dog-profile-pic.png">
+          <img src="./newsfeed-images/dog-profile-pic.png">
         </div>
         <div class="name-address">
           <div class="name">Bello</div>
@@ -106,7 +106,7 @@
     <div class="tweet">
       <div class="head">
         <div class="profile-image">
-          <img src="/images/dogs-profile-pic.png">
+          <img src="./newsfeed-images/dogs-profile-pic.png">
         </div>
         <div class="name-address">
           <div class="name">A.I. Dogz</div>
