login.html linked to index.html by nesting a link within the button element.

--- a/login-page/login.html
+++ b/login-page/login.html
@@ -20,7 +20,7 @@
       <input class="email" id="emailLogin" placeholder="Email, phone, or username" autocomplete="off">
         <input class="password" id="passwordLogin" type="password" placeholder="Password">
       <div class="login-btn-container">
-        <button class="login-btn">Log-In</button>
+        <button class="login-btn"><a href="/newsfeed-page/index.html">Log-In</a></button>
       </div>
     </div>
     <p class="create-account-text">Don't have an account? <a href="" target="_blank">Sign-Up</a></p>
